Fixing offer trash not visible, the whole offer block isn't relatively positioned

--- a/main/src/offerdiary/WebContent/offers/css/eachOffer.css
+++ b/main/src/offerdiary/WebContent/offers/css/eachOffer.css
@@ -4,7 +4,6 @@
             	min-height: 100px;
             	border-style: dotted;
             	border-width: 2px;
-				position: relative;
             }
 
             .offerDesc {
@@ -80,6 +79,11 @@
 			    margin-right:10%;
 			    padding: 5px;
 			    position: absolute;
-			    top: -20%;
+			    bottom: 5%;
+			}
+			
+			.expiryBlock {
+				position: relative;
+				
 			}
 			
